{{$NEXT}}

    [ API CHANGES ]
    * Deprecation of 'logger' (use set). (Alberto Simões)
    * Deprecate 'layout' (use set). (Alberto Simões)
    * Definitely remove plack_middlewares HashRef deprecation.
      (Alberto Simões & Damien Krotkine)

    [ ENHANCEMENTS ]
    * GH #519: remove redundant lines from CSS
      (Alberto Simões)
    * When scaffolding an app, show a warning if YAML not installed.
      Prompted by Issue 496.  (David Precious)
    * Hooks! add new positions for hooks, and possibility to create your
      own hooks inside your application and your plugin.
      (Franck Cuny)
    * Don't try to read/set session vars with empty/undef keys.
      It doesn't make sense to do so, and can cause warnings elsewhere.
      (David Precious)
    * Check HTTP status code/alias passed to status() is valid; previously, and
      invalid code would result in the response status being unset
      (David Precious, prompted on IRC by jonas)
    * Lowercase status aliases and swap spaces for underscores before trying to
      match (David Precious, suggested on IRC by jonas)
    * Added 'behind_proxy' setting, making Dancer honor X_FORWARDED_PROTOCOL and
      X_FORWARDED_HOST (Alberto Simões, requested by sukria and others)

1.3040      01.05.2011
    ** Codename: Yanick in Black // Yanick Champoux, Labor Day - May Day **

    [ ENHANCEMENTS ]
    * No functional changes, just releasing as stable.

1.3039_01   27.04.2011

    [ BUG FIXES ]
    * Fix 404 results from forwarding.
      (Alberto Simões)
    * Don't remove trailing slashes from route patterns under prefix.
      (Brian E. Lozier)
    * Remove deprecated r() function from list of exports.
      (Stefan Hornburg)
    * GH #402: make session_expires honor +2h style formatting.
      (Michael G. Schwern)
    * GH #433: encoding issues with forward().
      (Alberto Simões)
    * GH #390: Renaming access_log to startup_info (+doc).
      (Sawyer X)